--- a/atividade_4.Rmd
+++ b/atividade_4.Rmd
@@ -46,6 +46,7 @@ beta<-R1C1 + R2C2+ R1C2
 delta<-(R1C1 + R2C2+ R1C2)^2 - 4*(R1C1*R2C2)
 
 s1<- (-(R1C1 + R2C2+ R1C2)+sqrt(delta))/(2*(R1C1*R2C2))
+
 s2<- (-(R1C1 + R2C2+ R1C2)-sqrt(delta))/(2*(R1C1*R2C2))
 
 FT_denom<- function(s){
@@ -69,17 +70,24 @@ tabela<-cbind(s,FT_denom(s),sign(FT_denom(s)))
 print(tabela)
 
 muda_sinal_anterior<-c(FALSE)
+
 for (i in 2:nrow(tabela)) {
 muda_sinal_anterior[i]  <-!(sign(tabela[i-1,2]) == sign(tabela[i,2]))
+ 
 }
 tabela2<- cbind(tabela, "mudou o sinal?" = muda_sinal_anterior)
+
 print(tabela2)
 
 intervalos<-list(0)
 for (i in 2:nrow(tabela2)) {
   if (tabela2[i,4]==1){
+    if (tabela2[i-1,3] == 1) {
   intervalos[[i-1]] <- cbind(tabela2[i-1,1],tabela2[i,1])
-  
+    }
+    else if (tabela2[i-1,3] == -1){
+      intervalos[[i-1]] <- cbind(tabela2[i,1],tabela2[i-1,1])
+    }
   }
   else{
     intervalos[[i-1]] <- NA
@@ -87,12 +95,13 @@ for (i in 2:nrow(tabela2)) {
   }
 }
 
+
 intervalos<-intervalos[!is.na(intervalos)]
 print(intervalos)
 
 ```
 
-Usando a técnica de Bissecção
+# Usando a técnica de Bissecção
 
 ```{r}
 m1<-function(a,b){
@@ -101,6 +110,8 @@ m1<-function(a,b){
 }
 erro<- c(0.01)
 raizes<-c(0)
+j<-1
+k<-0
 for (j in 1:length(intervalos)) {
   a<- intervalos[[j]][[1]]
 b<- intervalos[[j]][[2]]
@@ -120,6 +131,8 @@ while (abs(f_x_barra)> erro) {
       print(cbind(x_barra,f_x_barra))
      
  }
+  k<- k + 1
+  print(k)
 raizes[j]<-x_barra
 }
 print(j)
@@ -129,8 +142,135 @@ print(j)
 print(paste0("resultado final é:",x_barra))
 
 ```
-entra em loop para essers valores de R's e C's para encontrar a raiz -0.97
+Para o intervalo 2, entra em loop para esses valores de R's e C's para encontrar a raiz -0.9
+
+
+```{r}
+intervalos[[2]]
+
+```
+# Método da Posição Falsa
+
+````{r}
+m2<- function(a,b){
+  x0<- (a*FT_denom(a) -b*FT_denom(b))/(FT_denom(a)-FT_denom(b))
+  return(x0)
+}
+erro<- c(0.01)
+raizes2<-c(0)
+j<-1
+k<-0
+
+for (j in 1:length(intervalos)) {
+  a<- intervalos[[j]][[1]]
+b<- intervalos[[j]][[2]]
+x_barra<-m2(a,b)
+f_x_barra <- FT_denom(x_barra) #iniciar
+
+while ( abs(b-a) & abs(FT_denom(a)) & abs(FT_denom(b)) & abs(FT_denom(x_barra)) > erro) {
+ if (sign(f_x_barra) == -1){
+      b<-x_barra
+      a
+      b
+      x_barra<-m2(a,b)
+      x_barra
+      f_x_barra <- FT_denom(x_barra)
+      print(cbind(x_barra,f_x_barra))
+ } else if (sign(f_x_barra) == 1){
+      a<-x_barra
+      a
+      b
+      x_barra<-m2(a,b)
+      x_barra
+      f_x_barra <- FT_denom(x_barra)
+      f_x_barra
+      print(cbind(x_barra,f_x_barra))
+     
+ }
+  k<- k + 1
+  print(k)
+raizes2[j]<-x_barra
+}
+
+}
+
+
+print(paste0("resultado final é:",x_barra))
+
 ```
 
+# Método de ponto Fixo
 
+Necessário determinar uma função phi(x), isolando o x. Para o nosso caso, devemos isolar o s da FT_denom, R1C1*R2C2*(s^2) + (R1C1 + R2C2+ R1C2)*s +1. Temos a opção de isolar da primeira parcela que está elevado ao quadrado, ou da segunda parcela. Faremos ambos.
 
+```{r}
+phi1 <- function(s){ ##isolando s da segunda parcela
+  x0<- (R1C1*R2C2*(s^2)+1)/(R1C1 + R2C2+ R1C2)*-1
+  return(x0)
+}
+
+phi2 <- function(s){
+  x0<- (sqrt(((R1C1 + R2C2+ R1C2)*s +1)/(R1C1*R2C2)))*-1
+  return(x0)
+}
+phi3 <- function(s){ ##isolando s da segunda parcela
+  x0<- (-1)/(R1C1*R2C2*(s)+(R1C1 + R2C2+ R1C2))
+  return(x0)
+}
+
+intervalos
+a<- intervalos[[1]][[1]]
+b<-intervalos[[1]][[2]]
+x0<- (a+b)/2
+
+xx<- c(0)
+for (i in 1:3) {
+  t<- phi1(x0)
+  xx[i]<-x0
+  x0<-t
+}
+xx2<- c(0)
+for (i in 1:3) {
+  t<- phi2(x0)
+  xx2[i]<-x0
+  x0<-t
+}
+xx3<- c(0)
+for (i in 1:3) {
+  t<- phi3(x0)
+  xx3[i]<-x0
+  x0<-t
+}
+
+```
+A função phi2 tem um limite de intervalo dentro do plano real devido a raiz. Por isso, usaremos phi1.
+
+```{r}
+raizes3<- c(0)
+#for (j in 1:length(intervalos)) {
+  a<- intervalos[[j]][[1]]
+  b<- intervalos[[j]][[2]]
+  x_barra<- (a+b)/2
+  x1<- 1
+  
+  f_x_barra <- FT_denom(x_barra) #iniciar
+  k<- 1
+  tal<- list(0)
+  
+  while (abs(f_x_barra)>erro & abs(x1)>erro) {
+        t<- phi1(x_barra)
+        x1<- (x_barra-t)
+        tal[[k]]<-cbind(x_barra, f_x_barra)
+        x_barra<-t
+        print(x_barra)
+        f_x_barra <- FT_denom(x_barra)
+        k<- k+1
+        raizes3[j]<-t
+  }
+  
+#}
+print(raizes3)
+ggplot()+geom_line(aes(x = x, y = phi1(x))) + geom_line(aes(x = x, y =x))
+
+```
+Por algum motivo, não funciona para o intervalo -13 a -12.5. Parece ter apenas um ponto de convergência. Phi2 e phi3 também não funcionam.
