--- a/atividade_4.Rmd
+++ b/atividade_4.Rmd
@@ -46,6 +46,7 @@ beta<-R1C1 + R2C2+ R1C2
 delta<-(R1C1 + R2C2+ R1C2)^2 - 4*(R1C1*R2C2)
 
 s1<- (-(R1C1 + R2C2+ R1C2)+sqrt(delta))/(2*(R1C1*R2C2))
+
 s2<- (-(R1C1 + R2C2+ R1C2)-sqrt(delta))/(2*(R1C1*R2C2))
 
 FT_denom<- function(s){
@@ -69,17 +70,24 @@ tabela<-cbind(s,FT_denom(s),sign(FT_denom(s)))
 print(tabela)
 
 muda_sinal_anterior<-c(FALSE)
+
 for (i in 2:nrow(tabela)) {
 muda_sinal_anterior[i]  <-!(sign(tabela[i-1,2]) == sign(tabela[i,2]))
+ 
 }
 tabela2<- cbind(tabela, "mudou o sinal?" = muda_sinal_anterior)
+
 print(tabela2)
 
 intervalos<-list(0)
 for (i in 2:nrow(tabela2)) {
   if (tabela2[i,4]==1){
+    if (tabela2[i-1,3] == 1) {
   intervalos[[i-1]] <- cbind(tabela2[i-1,1],tabela2[i,1])
-  
+    }
+    else if (tabela2[i-1,3] == -1){
+      intervalos[[i-1]] <- cbind(tabela2[i,1],tabela2[i-1,1])
+    }
   }
   else{
     intervalos[[i-1]] <- NA
@@ -87,12 +95,13 @@ for (i in 2:nrow(tabela2)) {
   }
 }
 
+
 intervalos<-intervalos[!is.na(intervalos)]
 print(intervalos)
 
 ```
 
-Usando a técnica de Bissecção
+# Usando a técnica de Bissecção
 
 ```{r}
 m1<-function(a,b){
@@ -101,6 +110,8 @@ m1<-function(a,b){
 }
 erro<- c(0.01)
 raizes<-c(0)
+j<-1
+k<-0
 for (j in 1:length(intervalos)) {
   a<- intervalos[[j]][[1]]
 b<- intervalos[[j]][[2]]
@@ -120,6 +131,8 @@ while (abs(f_x_barra)> erro) {
       print(cbind(x_barra,f_x_barra))
      
  }
+  k<- k + 1
+  print(k)
 raizes[j]<-x_barra
 }
 print(j)
@@ -129,8 +142,59 @@ print(j)
 print(paste0("resultado final é:",x_barra))
 
 ```
-entra em loop para essers valores de R's e C's para encontrar a raiz -0.97
+Para o intervalo 2, entra em loop para esses valores de R's e C's para encontrar a raiz -0.9
+
+
+```{r}
+intervalos[[2]]
+
 ```
+# Método da Posição Falsa
+
+````{r}
+m2<- function(a,b){
+  x0<- (a*FT_denom(a) -b*FT_denom(b))/(FT_denom(a)-FT_denom(b))
+  return(x0)
+}
+erro<- c(0.01)
+raizes2<-c(0)
+j<-1
+k<-0
+
+for (j in 1:length(intervalos)) {
+  a<- intervalos[[j]][[1]]
+b<- intervalos[[j]][[2]]
+x_barra<-m2(a,b)
+f_x_barra <- FT_denom(x_barra) #iniciar
+
+while ( abs(b-a) & abs(FT_denom(a)) & abs(FT_denom(b)) & abs(FT_denom(x_barra)) > erro) {
+ if (sign(f_x_barra) == -1){
+      b<-x_barra
+      a
+      b
+      x_barra<-m2(a,b)
+      x_barra
+      f_x_barra <- FT_denom(x_barra)
+      print(cbind(x_barra,f_x_barra))
+ } else if (sign(f_x_barra) == 1){
+      a<-x_barra
+      a
+      b
+      x_barra<-m2(a,b)
+      x_barra
+      f_x_barra <- FT_denom(x_barra)
+      f_x_barra
+      print(cbind(x_barra,f_x_barra))
+     
+ }
+  k<- k + 1
+  print(k)
+raizes2[j]<-x_barra
+}
+
+}
 
 
+print(paste0("resultado final é:",x_barra))
 
+```
