--- a/notes.Rmd
+++ b/notes.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Cálculo Numérico - achar zeros de uma função"
 output:
+  pdf_document: default
   html_document:
     df_print: paged
 ---
@@ -9,8 +10,11 @@ output:
 
 ```{r}
 library(tidyverse)
+library(tinytex)
 ```
-
+```{r, include=FALSE}
+options(tinytex.verbose = TRUE)
+```
 # Primeiro passo - Isolamento
 
 ![isolamento](C:/Users/bkfro/Documents/advancedprogramming/imagens/isolamento.png)
@@ -37,14 +41,19 @@ print(tabela2)
 intervalos<-list(0)
 for (i in 2:nrow(tabela2)) {
   if (tabela2[i,4]==1){
+    if (tabela2[i-1,3] == 1) {
   intervalos[[i-1]] <- cbind(tabela2[i-1,1],tabela2[i,1])
-  
+    }
+    else if (tabela2[i-1,3] == -1){
+      intervalos[[i-1]] <- cbind(tabela2[i,1],tabela2[i-1,1])
+    }
   }
   else{
     intervalos[[i-1]] <- NA
   
   }
 }
+
 
 intervalos<-intervalos[!is.na(intervalos)]
 print(intervalos)
@@ -181,7 +190,7 @@ f_x_barra <- fx(x_barra)
 FINALMENTE, encontramos um f(x_barra) menor que o erro, então temos uma das raízes
 
 ```{r}
-f_x_barra> erro
+abs(f_x_barra)> erro
 print(x_barra)
 ```
 
@@ -192,8 +201,8 @@ Agora falta o outro intervalo (PUTA QUE PARIU)
 ![metodo12](C:/Users/bkfro/Documents/advancedprogramming/imagens/resumo_bisseccao.png)
 
 ```{r}
-a<- 0.5
-b<- 1
+a<- intervalos[[2]][[1]]
+b<- intervalos[[2]][[2]]
 x_barra<-m1(a,b)
 f_x_barra <- fx(x_barra)
 
@@ -216,3 +225,58 @@ print(paste0("resultado final é:",x_barra))
 
 ```
 
+## Metódo da Posição Falsa
+
+O método da posição falsa só difere no método de obter o x_barra.
+
+![metodo12](C:/Users/bkfro/Documents/advancedprogramming/imagens/posicaofalsa.png)
+
+```{r}
+m2<- function(a,b){
+  x0<- (a*fx(a) -b*fx(b))/(fx(a)-fx(b))
+  return(x0)
+}
+```
+
+O critério de parada passa a ser a diferença entre b e a menor que o erro ou f(a ou b ou x) menor que erro.
+
+![metodo22](C:/Users/bkfro/Documents/advancedprogramming/imagens/posicaofalsa2.png)
+
+
+```{r}
+c1<-abs(b-a)>erro
+c2<-((abs(fx(a)) | abs(fx(b))|abs(fx(x_barra)))>erro)
+condition<- (c1|c2)
+
+```
+
+
+Exemplo utilizando fx 
+
+
+```{r}
+a<- intervalos[[2]][[1]]
+b<- intervalos[[2]][[2]]
+x_barra<-m2(a,b)
+f_x_barra <- fx(x_barra)
+#k<-0
+while (abs(b-a) & abs(fx(a)) & abs(fx(b)) & abs(fx(x_barra)) > erro) {
+ if (sign(f_x_barra) == -1){
+  b<-x_barra
+      x_barra<-m2(a,b)
+      f_x_barra <- fx(x_barra)
+      print(cbind(x_barra,f_x_barra))
+      } else if (sign(f_x_barra) == 1){
+  a<-x_barra
+  x_barra<-m2(a,b)
+      f_x_barra <- fx(x_barra)
+      print(cbind(x_barra,f_x_barra))
+
+ }
+
+      }
+print(paste0("resultado final é:",x_barra))
+
+
+```
+![metodo23](C:/Users/bkfro/Documents/advancedprogramming/imagens/posicaofalsaresumo.png)
